Fixed spacing

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ p {
 	overflow: hidden;
 	background-color: #333;
 	position: fixed;
-
 	top: 0;
 	width: 100%;
 }
@@ -113,6 +112,10 @@ footer .column a{
 
 .name{
 	font-size: 72px;
+	text-align: center;
+}
+.maintenance{
+	font-size: 36px;
 	text-align: center;
 }
 
